--- a/student.ipynb
+++ b/student.ipynb
@@ -7,11 +7,11 @@
     "## Final Project Submission\n",
     "\n",
     "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
-    "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
-    "* Blog post URL:\n"
+    "* Student name: Gregory Antony Mikuro\n",
+    "* Student pace: Full Time\n",
+    "* Scheduled project review date/time: 22/03/2024\n",
+    "* Instructor name: Nikita Njoroge\n",
+    "* Blog post URL: \n"
    ]
   },
   {
@@ -20,7 +20,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here - remember to use markdown cells for comments as well!"
+    "## Your code here - remember to use markdown cells for comments as well!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Box Office Mojo "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. IMDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. TheMovieDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. The Numbers"
    ]
   }
  ],
