--- a/student.ipynb
+++ b/student.ipynb
@@ -15,15 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 570,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here - remember to use markdown cells for comments as well!"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 674,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +53,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.1.1 Data Extraction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 675,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +153,7 @@
        "4     513900000  2010  "
       ]
      },
-     "execution_count": 572,
+     "execution_count": 675,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 676,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +260,7 @@
        "3386  2018  "
       ]
      },
-     "execution_count": 573,
+     "execution_count": 676,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,8 +271,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.1.2 Data Cleaning "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +508,7 @@
        "[3382 rows x 5 columns]"
       ]
      },
-     "execution_count": 577,
+     "execution_count": 680,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [
     {
@@ -575,8 +580,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2.1 Data Extraction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +723,7 @@
        "7  CREATE TABLE \"writers\" (\\n\"movie_id\" TEXT,\\n  ...  "
       ]
      },
-     "execution_count": 580,
+     "execution_count": 683,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 684,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +863,7 @@
        "[73856 rows x 3 columns]"
       ]
      },
-     "execution_count": 581,
+     "execution_count": 684,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1063,7 @@
        "[146144 rows x 6 columns]"
       ]
      },
-     "execution_count": 582,
+     "execution_count": 685,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,8 +1081,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2.2 Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 686,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 687,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1342,7 @@
        "[73856 rows x 8 columns]"
       ]
      },
-     "execution_count": 584,
+     "execution_count": 687,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1657,7 @@
        "[66236 rows x 8 columns]"
       ]
      },
-     "execution_count": 587,
+     "execution_count": 690,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1943,7 @@
        "[66236 rows x 11 columns]"
       ]
      },
-     "execution_count": 588,
+     "execution_count": 691,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [
     {
@@ -2206,7 +2225,7 @@
        "[66236 rows x 9 columns]"
       ]
      },
-     "execution_count": 590,
+     "execution_count": 693,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 694,
    "metadata": {},
    "outputs": [
     {
@@ -2267,8 +2286,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3.1 Data Extraction "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2423,7 @@
        "4                                     Inception           8.3       22186  "
       ]
      },
-     "execution_count": 592,
+     "execution_count": 695,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2411,8 +2437,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3.2 Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 696,
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 697,
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2621,7 @@
        "4             28  "
       ]
      },
-     "execution_count": 594,
+     "execution_count": 697,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2623,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [
     {
@@ -2758,7 +2791,7 @@
        "26516           0.0           1             53  "
       ]
      },
-     "execution_count": 595,
+     "execution_count": 698,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2772,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [
     {
@@ -2817,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [
     {
@@ -2965,7 +2998,7 @@
        "4             28             Action  "
       ]
      },
-     "execution_count": 597,
+     "execution_count": 700,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3003,7 +3036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [
     {
@@ -3040,7 +3073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [
     {
@@ -3181,7 +3214,7 @@
        "26516           0.0           1             53           Thriller  "
       ]
      },
-     "execution_count": 599,
+     "execution_count": 702,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3200,8 +3233,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.4.1 Data Extraction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [
     {
@@ -3299,7 +3339,7 @@
        "4      $317,000,000   $620,181,382  $1,316,721,747  "
       ]
      },
-     "execution_count": 600,
+     "execution_count": 703,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3314,7 +3354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [
     {
@@ -3343,8 +3383,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.4.2 Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3362,7 +3409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [
     {
@@ -3387,10 +3434,15 @@
    ],
    "source": [
     "#Display concise summary information about the DataFrame tn_df.\n",
-    "\n",
-    "\n",
     "tn_df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
