--- a/student.ipynb
+++ b/student.ipynb
@@ -11,7 +11,7 @@
     "* Student pace: Full Time\n",
     "* Scheduled project review date/time: 22/03/2024\n",
     "* Instructor name: Nikita Njoroge\n",
-    "* Blog post URL: \n"
+    "* Blog post URL: https://github.com/gregorymikuro/Project-Box-Office-Insight.git\n"
    ]
   },
   {
@@ -39,12 +39,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Research Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the forthcoming analysis, the research methodology will be data-driven, utilizing an extensive array of databases that aggregate film industry statistics and metrics. The primary sources of data will include Box Office Mojo, IMDb, TheMovieDB, and The Numbers. These databases are known for their comprehensive data on movie performance, including but not limited to box office returns, production budgets, and viewer ratings, providing a solid foundation for the analysis.\n",
+    "\n",
+    "To conduct the research effectively, this analysis will employ the following analytical tools and libraries within the Python programming language, recognized for its robust data manipulation and analysis capabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Import Statements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +190,7 @@
        "4     513900000  2010  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +297,7 @@
        "3386  2018  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +545,7 @@
        "[3382 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +781,7 @@
        "[3382 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +944,7 @@
        "7  CREATE TABLE \"writers\" (\\n\"movie_id\" TEXT,\\n  ...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1084,7 @@
        "[73856 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1284,7 @@
        "[146144 rows x 6 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1563,7 @@
        "[73856 rows x 8 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1878,7 @@
        "[66236 rows x 8 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2148,7 +2164,7 @@
        "[66236 rows x 11 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2446,7 @@
        "[66236 rows x 9 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2451,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2628,7 +2644,7 @@
        "4                                     Inception           8.3       22186  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2650,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2826,7 +2842,7 @@
        "4             28  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2861,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2996,7 +3012,7 @@
        "26516           0.0           1             53  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3010,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3055,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3219,7 @@
        "4             28             Action  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3241,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3253,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3410,7 @@
        "26516           0.0           1             53           Thriller  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3407,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -3458,7 +3474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -3556,7 +3572,7 @@
        "4      $317,000,000   $620,181,382  $1,316,721,747  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3571,7 +3587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -3608,7 +3624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3629,7 +3645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3641,7 +3657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3652,7 +3668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -3682,7 +3698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -3861,7 +3877,7 @@
        "[4163 rows x 7 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3892,7 +3908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -4047,7 +4063,7 @@
        "[3382 rows x 5 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4066,7 +4082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -4094,7 +4110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -4249,7 +4265,7 @@
        "[4163 rows x 5 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4280,7 +4296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -4310,7 +4326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -4465,7 +4481,7 @@
        "[7545 rows x 5 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4481,7 +4497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -4606,7 +4622,7 @@
        "[75 rows x 3 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4621,7 +4637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -4672,7 +4688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -4717,7 +4733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -4958,7 +4974,7 @@
        "[66236 rows x 10 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4996,7 +5012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -5010,7 +5026,7 @@
        "Name: runtime_quantile, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5039,7 +5055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -5096,7 +5112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5121,7 +5137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5134,7 +5150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -5388,7 +5404,7 @@
        "[13099 rows x 10 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5401,7 +5417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -5436,7 +5452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -5701,7 +5717,7 @@
        "[4335 rows x 12 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5714,7 +5730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -5761,7 +5777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5784,7 +5800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5809,7 +5825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -5927,7 +5943,7 @@
        "[17434 rows x 3 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5943,7 +5959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5954,7 +5970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -5990,7 +6006,7 @@
        "Name: primary_genre_name, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6003,7 +6019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -6051,7 +6067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -6230,7 +6246,7 @@
        "[4163 rows x 7 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6253,7 +6269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -6432,7 +6448,7 @@
        "[1407 rows x 7 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6458,7 +6474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6478,7 +6494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -6526,7 +6542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -6561,7 +6577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -6765,7 +6781,7 @@
        "[1407 rows x 8 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6787,7 +6803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -7003,7 +7019,7 @@
        "[1407 rows x 9 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7017,7 +7033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -7031,7 +7047,7 @@
        "Name: ROI, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7047,7 +7063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
